altered project back button to look clean and adapt to mobile devices

--- a/projects/MonsterKiller/assets/styles/app.css
+++ b/projects/MonsterKiller/assets/styles/app.css
@@ -86,18 +86,21 @@ button:active {
 }
 
 #back {
+  background-color: var(--iceblue);
+  border: 0.5rem solid var(--iceblue);
+  border-radius: 25%;
   color: white;
-  text-decoration: none;
-  font-size: 5rem;
-  padding: 20px;
+  font-size: 2rem;
+  padding: 0.5rem;
   position: absolute;
   top: 0;
   left: 0;
-  border: 1px dotted --textcolor;
-  background-color: var(--iceblue);
+  text-decoration: none;
 }
 
 #back:hover {
+  background-color: white;
+  border: 0.5rem solid white;
   color: black;
 }
 
