--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ p {
 
 .altcontainer {
    background-color: var(--iceblue);
-   height: 100%;
+   height: 75%;
 }
 
 .bar {
@@ -109,7 +109,8 @@ p {
 }
 
 .heading {
-   padding: 20px;
+   padding-left: 1rem;
+   padding-right: 1rem;
 }
 
 .link {
@@ -121,7 +122,7 @@ p {
    position: fixed;
    right: 20px;
    top: 5px;
-   padding: 5px;
+   padding: 1rem;
 }
 
 .projects {
