--- a/projects/faq_project/style.css
+++ b/projects/faq_project/style.css
@@ -11,7 +11,9 @@
 
 body {
    font-family: 'Mate', sans-serif;
-   background-color: #FBF4E9;
+   background-image: linear-gradient(#fbf4e9f5, rgba(255, 0, 0, 0.2));
+   background-repeat: no-repeat;
+   height: 100vh;
 }
 
 h1 {
